fixed an issue where the snake canvas was off on different screen sizes

--- a/main.html
+++ b/main.html
@@ -14,6 +14,7 @@
       <p>Score = </p>
       <p id="score_num">0</p>
     </div>
+    <div id="canvasContainer"></div>
     <div id='controls'>
       <p>Use the arrow keys to move the snake.</p>
       <p>Press one of the arrow keys to begin.</p>
